--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             height: 100%;
             z-index: -2;
             /* Prioritize local file, fallback to an online placeholder that looks like the TARS image */
-            background-image: url('bground.jpeg'), url('https://images.unsplash.com/photo-1462331940025-496dfbfc7564?q=80&w=2011&auto=format&fit=crop');
+            background-image: url('bground.png'), url('https://images.unsplash.com/photo-1462331940025-496dfbfc7564?q=80&w=2011&auto=format&fit=crop');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
