--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             height: 100%;
             z-index: -2;
             /* Prioritize local file, fallback to an online placeholder that looks like the TARS image */
-            background-image: url('bground.jpeg');
+            background-image: url('bground.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
