--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            background-color: #050505;
+            background-color: transparent; /* FIXED: Made transparent so the fixed-bg behind it is visible */
             color: #ffffff;
         }
 
@@ -68,8 +68,15 @@
             width: 100%;
             height: 100%;
             z-index: -2;
-            /* Prioritize local file, fallback to an online placeholder that looks like the TARS image */
-            background-image: url('bground.jpg');
+            background-color: #050505; /* Fallback color is now here */
+            
+            /* IMPORTANT FOR YOU: 
+               Currently using an online placeholder so you can see the preview here.
+               When you save this file, you can change this line to: 
+               background-image: url('bground.jpeg'); 
+            */
+            background-image: url('https://images.unsplash.com/photo-1462331940025-496dfbfc7564?q=80&w=2011&auto=format&fit=crop');
+            
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -83,8 +90,8 @@
             width: 100%;
             height: 100%;
             z-index: -1;
-            background: rgba(0, 0, 0, 0.65); /* Darken */
-            backdrop-filter: blur(12px); /* heavy blur for readability */
+            background: rgba(0, 0, 0, 0.65); /* Darken for readability */
+            backdrop-filter: blur(12px); /* Heavy blur as requested */
             -webkit-backdrop-filter: blur(12px);
         }
 
